welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: not found: type move
def move(nbPas:Int, versLAvant:Boolean): move = {
                                         ^